Inclusion of  Home and Welcome controller. Devise gem and configuration for login with CPF

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Bank number</th>
       <th>Agency</th>
+      <th>Account number</th>
       <th>Balance</th>
       <th>Account type</th>
       <th>Client</th>
@@ -19,6 +20,7 @@
       <tr>
         <td><%= account.bank_number %></td>
         <td><%= account.agency %></td>
+        <td><%= account.account_number %></td>
         <td><%= account.balance %></td>
         <td><%= account.account_type %></td>
         <td><%= account.client %></td>
