--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Account number:</strong>
+  <%= @account.account_number %>
+</p>
+
+<p>
   <strong>Balance:</strong>
   <%= @account.balance %>
 </p>
