--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -13,12 +13,17 @@
 
   <div class="field">
     <%= form.label :bank_number %>
-    <%= form.text_field :bank_number %>
+    <%= form.number_field :bank_number %>
   </div>
 
   <div class="field">
     <%= form.label :agency %>
-    <%= form.text_field :agency %>
+    <%= form.number_field :agency %>
+  </div>
+
+  <div class="field">
+    <%= form.label :account_number %>
+    <%= form.text_field :account_number %>
   </div>
 
   <div class="field">
